[package]
name = "AoC2024-Rust"
version = "1.0.0"
authors = ["Massimo Pavoni"]
repository = "https://github.com/massimopavoni/AoC2024-Rust"
license-file = "LICENSE"
edition = "2021"

[dependencies]
atoi = "2.0.0"
grid = "0.15.0"
include_dir = "0.7.4"
itertools = "0.13.0"
num-modular = "0.6.1"
regex = "1.11.1"

[lints.clippy]
nursery = "warn"
pedantic = "warn"

[profile.dev]
overflow-checks = false
