[package]
name = "AoC2024-Rust"
version = "1.0.0"
authors = ["Massimo Pavoni"]
repository = "https://github.com/massimopavoni/AoC2024-Rust"
license-file = "LICENSE"
edition = "2024"

[dependencies]
atoi = "2.*"
derive_more = { version = "2.*", features = ["add", "add_assign", "display"] }
grid = "0.16.*"
include_dir = "0.7.*"
itertools = "0.14.*"
nalgebra = "0.33.*"
num-modular = "0.6.*"
pathfinding = "4.*"
rayon = "1.10.*"
regex = "1.11.*"
rustc-hash = "2.1.*"

[lints.clippy]
nursery = "warn"
pedantic = "warn"

[profile.dev]
overflow-checks = false

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
# debug = true
